# oneclerk

./: .dockerignore  .env.example  .gitignore  .replit  Dockerfile  REFACTOR_SUMMARY.md  nixpacks.toml  package-lock.json  package.json  railway.json  railway_beat.json  railway_worker.json  replit.md  requirements.txt  vercel.json  verify_backend.py
oneclerk/: .gitignore  .replit  nixpacks.toml  pyproject.toml  railway.json  replit.md
oneclerk/app/: config.py  database.py  main.py
oneclerk/app/api/: agents.py  auth.py  billing.py  calls.py  dashboard.py  integrations.py  preview.py  webhooks.py
oneclerk/app/models/: __init__.py  call.py  user.py
oneclerk/app/routes/: agents.py  calls.py  dashboard.py
oneclerk/app/schemas/: agent.py
oneclerk/app/services/: ai_brain.py  gmail_service.py  telnyx_voice.py
oneclerk/app/static/: app.js  index.html  styles.css
oneclerk/app/utils/: auth.py
oneclerk/attached_assets/: Pasted--github-plugin-github-openai-curated-Inspect-PRs-triage_1777183772253.txt  Pasted-These-are-all-just-warnings-not-errors-Your-frontend-st_1777681387901.txt  Pasted-fix-all-the-logs-and-issues-Running-build-in-Washington_1777705772613.txt
oneclerk/frontend/: next.config.js  package-lock.json  package.json
oneclerk/frontend/.next/: trace
oneclerk/oneclerk/: .gitignore  nixpacks.toml
oneclerk/oneclerk/app/: dependencies.py
oneclerk/oneclerk/attached_assets/: Pasted--Status-Check-What-s-Actually-Done-vs-What-s-Needed-Hon_1777185300621.txt
oneclerk/oneclerk/frontend/: .gitignore  next.config.js  package-lock.json  package.json  (+1 more)
(+214 files in other folders)
